# tech-prog-labs

./: .gitignore  LICENSE  README.md
lab_1/: CMakeLists.txt  README.md
lab_1/include/: Keeper.h  Stationery.h  StoreItem.h  Textbook.h
lab_1/src/: Book.cpp  Book.h  CustomException.h  Keeper.cpp  Keeper.h  Stationery.cpp  Stationery.h  StoreItem.cpp  StoreItem.h  Textbook.cpp  Textbook.h  main.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/include/: CustomException.h  Train.h  TrainSchedule.h  tasks.h
lab_2/src/: Train.cpp  TrainSchedule.cpp  main.c  main.cpp  main_task1.cpp  main_task2.cpp  task1.cpp  task2.cpp
